Fix Overflow Bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
+body,
 html {
+  overflow-x: hidden;
   background-color: #c7ceea;
 }
 
@@ -9,5 +11,4 @@ html {
   justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 0.5rem;
 }
